--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -168,6 +168,18 @@ var page = {
         <li>
           <%- include('./_partial/sponsor', { id: 'sphinx', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'cyberagent', grade: 'silver' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'opt', grade: 'silver' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'uniba', grade: 'silver' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'nifty', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -175,6 +187,15 @@ var page = {
       <ul class="sponsors-list">
         <li>
           <%- include('./_partial/sponsor', { id: 'theport', grade: 'media' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'qrio', grade: 'media' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'goodpatch', grade: 'media' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'lig', grade: 'media' }) %>
         </li>
       </ul>
     </div>
