--- a/2016/src/html/sponsors.ejs
+++ b/2016/src/html/sponsors.ejs
@@ -16,56 +16,73 @@ var page = {
     <h2 class="page-title sponsors-title"><%= page.title %></h2>
     <div class="page-body sponsors-body">
 
-      <div class="sponsors-section">
-        <h3 class="sponsors-grade">Platinum</h3>
-        <ul class="sponsors-list">
-          <li>
-            <%- include('./_partial/sponsor', { id: 'paypal', grade: 'platinum' }) %>
-          </li>
-        </ul>
-      </div>
-      <div class="sponsors-section">
-        <h3 class="sponsors-grade">Gold</h3>
-        <ul class="sponsors-list">
-          <li>
-            <%- include('./_partial/sponsor', { id: 'dwango', grade: 'gold' }) %>
-          </li>
-          <li>
-            <%- include('./_partial/sponsor', { id: 'r-tech', grade: 'gold' }) %>
-          </li>
-          <li>
-            <%- include('./_partial/sponsor', { id: 'yahoo', grade: 'gold' }) %>
-          </li>
-        </ul>
-      </div>
-      <div class="sponsors-section">
-        <h3 class="sponsors-grade">Silver</h3>
-        <ul class="sponsors-list">
-          <li>
-            <%- include('./_partial/sponsor', { id: 'pxgrid', grade: 'silver' }) %>
-          </li>
-          <li>
-            <%- include('./_partial/sponsor', { id: 'sphinx', grade: 'silver' }) %>
-          </li>
-        </ul>
-      </div>
-      <div class="sponsors-section">
-        <h3 class="sponsors-grade">Media</h3>
-        <ul class="sponsors-list">
-          <li>
-            <%- include('./_partial/sponsor', { id: 'theport', grade: 'media' }) %>
-          </li>
-        </ul>
+      <div class="prs">
+        <div class="prs-section Section">
+          <h3 class="prs-grade Section-title">Platinum</h3>
+          <ul class="prs-list -platinum">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'paypal', grade: 'platinum' }) %>
+            </li>
+          </ul>
+        </div>
+
+        <div class="prs-section">
+          <h3 class="prs-grade">Gold</h3>
+          <ul class="prs-list -gold">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'dwango', grade: 'gold' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'r-tech', grade: 'gold' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'yahoo', grade: 'gold' }) %>
+            </li>
+          </ul>
+        </div>
+        <div class="prs-section">
+          <h3 class="prs-grade">Silver</h3>
+          <ul class="prs-list -silver">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'pxgrid', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'sphinx', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'cyberagent', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'opt', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'uniba', grade: 'silver' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'nifty', grade: 'silver' }) %>
+            </li>
+          </ul>
+        </div>
+        <div class="prs-section">
+          <h3 class="prs-grade">Media</h3>
+          <ul class="prs-list -media">
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'theport', grade: 'media' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'qrio', grade: 'media' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'goodpatch', grade: 'media' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'lig', grade: 'media' }) %>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </div>
-
-    <!-- TODO: 最寄り駅情報や会場の外観情報など
-    <div class="page-section">
-      <h3 class="page-subhead"></h3>
-      <div class="page-sectionBody"></div>
-    </div>
-    -->
 
   </section>
 
