--- a/2016/src/html/_partial/speaker-overlay.ejs
+++ b/2016/src/html/_partial/speaker-overlay.ejs
@@ -11,8 +11,8 @@
     <!-- Session detail & Speaker info-->
     <div class="session">
       <div class="session-speaker">
-        <div class="session-speakerAvatar">
-          <img src="img/pic-<%= id %>.jpg">
+        <div class="session-speakerAvatar" style="background-image:url(img/speakers/pic-<%= id %>.jpg");">
+          <!--<img src="img/speakers/pic-<%= id %>.jpg">-->
         </div>
         <div class="session-speakerProfile">
           <p class="session-speakerName"><%= speaker.name %></p>
