--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -72,6 +72,11 @@ var page = {
         </li>
         <% }); %>
       </ul>
+      <div class="home-speakersAction">
+        <a href="speakers.html" class="Button -primary">
+          Check All Speakers
+        </a>
+      </div>
     </div>
 
     <!-- Schedule -->
