--- a/2016/src/html/speakers.ejs
+++ b/2016/src/html/speakers.ejs
@@ -7,7 +7,19 @@ var page = {
     'bmeck',
     'zcbenz',
     'yoshuawuyts',
-    'mafintosh'
+    'mafintosh',
+    'a0viedo',
+    'watson',
+    'teppeis',
+    'bahmutov',
+    'fritzvd',
+    'BarakChamo',
+    'RichardLitt',
+    'kazupon',
+    'yoshidan',
+    'nkzawa',
+    'morishitter',
+    'chikoski'
   ]
 }
 %>
