--- a/2016/src/html/_partial/speaker.ejs
+++ b/2016/src/html/_partial/speaker.ejs
@@ -4,7 +4,7 @@
     <div class="Hex">
       <div class="Hex-outer">
         <div class="Hex-inner">
-          <img src="img/pic-<%= id %>.jpg" class="Hex-image">
+          <img src="img/speakers/pic-<%= id %>-mono.jpg" class="Hex-image">
         </div>
       </div>
     </div>
@@ -13,10 +13,5 @@
     <p class="speaker-name">
       <%= speaker.name %>
     </p>
-    <% if (speaker.twitter) { %>
-    <p class="speaker-links">
-      @<%= speaker.twitter %>
-    </p>
-    <% } %>
   </div>
 </a>
