画像差し替え

--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -1620,7 +1620,7 @@ $hex-image: $hex-canvas * $hex-ratio;
     z-index: -1;
     width: 100%;
     padding-top: percentage(740 / 1920);
-    background-image: url('img/bg-footer.png');
+    background-image: url('img/bg-tickets.png');
     background-size: cover;
   }
 }
