申し込みボタンをわける

--- a/2016/src/html/_partial/tickets.ejs
+++ b/2016/src/html/_partial/tickets.ejs
@@ -1,10 +1,23 @@
 <!-- Tickets -->
-<section class="tickets">
+<section class="tickets" id="tickets">
+  <header class="tickets-header">
+    <h3 class="tickets-title">Get your tickets</h3>
+    <div class="tickets-note">
+      <p>それぞれの日程ごとにお申し込みください。</p>
+    </div>
+  </header>
   <div class="tickets-body">
     <div class="tickets-action">
-      <a href="#" class="Button -primary">
-        Get your tickets
-      </a>
+      <div class="tickets-button">
+        <a href="https://eventdots.jp/event/602440" class="Button -workshop" target="_blank">
+          Nov 12, Ticket
+        </a>
+      </div>
+      <div class="tickets-button">
+        <a href="http://nodejs.connpass.com/event/42182" class="Button -conference" target="_blank">
+          Nov 13, Ticket
+        </a>
+      </div>
     </div>
   </div>
 </section>
