--- a/2016/src/html/_partial/navigation.ejs
+++ b/2016/src/html/_partial/navigation.ejs
@@ -8,7 +8,7 @@
         <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
         <li><a href="venues.html" class="navigation-target">Venues</a></li>
         <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
-        <li><a href="#" class="navigation-target -button">Tickets</a></li>
+        <li><a href="#tickets" class="navigation-target -button">Tickets</a></li>
       </ul>
       <button class="navigation-button">
         <svg xmlns="http://www.w3.org/2000/svg" class="navigation-icon"><use xlink:href="#close"></use></svg>
