--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -143,10 +143,44 @@ a {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  transition: background-color 300ms ease-in;
+  transition: background-color 150ms ease-in;
   &.-primary {
     border-color: $color-sunred;
     background-color: $color-sunred;
+    font-weight: 400;
+    &:hover {
+      background-color: mix($color-sunred,$color-whitefog,75%);
+    }
+  }
+  &.-workshop {
+    border: 4px solid $color-whitefog;
+    background-color: $color-sunflower;
+    font-weight: 400;
+    color: $color-inky;
+    box-shadow: 0 4px 0 0 rgba($color-sunflower, 0.75);
+    transition: all 150ms ease-in;
+    &:hover {
+      background-color: $color-whitefog;
+    }
+    &:active {
+      transform: translate(0, 2px);
+      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
+    }
+  }
+  &.-conference {
+    border: 4px solid $color-whitefog;
+    background-color: $color-leaf;
+    font-weight: 400;
+    color: $color-inky;
+    box-shadow: 0 4px 0 0 rgba($color-leaf, 0.75);
+    transition: all 150ms ease-in;
+    &:hover {
+      background-color: $color-whitefog;
+    }
+    &:active {
+      transform: translate(0, 2px);
+      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
+    }
   }
   &.is-disabled {
     border-color: $color-greymist;
@@ -381,6 +415,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   letter-spacing: 0.08em;
   font-weight: 200;
   color: $color-inky;
+  transition: background-color 150ms ease-in;
   &:hover {
     background-color: $color-sand;
   }
@@ -1610,7 +1645,8 @@ $hex-image: $hex-canvas * $hex-ratio;
 // Ticktets
 .tickets {
   position: relative;
-  padding: 3rem 1rem;
+  //margin-bottom: 1rem;
+  padding: 3rem 1rem 6rem 1rem;
   &:before {
     content: "";
     position: absolute;
@@ -1623,13 +1659,69 @@ $hex-image: $hex-canvas * $hex-ratio;
     background-image: url('img/bg-tickets.png');
     background-size: cover;
   }
+  @include over-md {
+    padding-bottom: 16rem;
+    //margin-bottom: 16rem;
+  }
+}
+.tickets-header {
+  margin-bottom: 2rem;
+  @include over-sm {
+    margin-bottom: 2rem;
+  }
+  @include over-md {
+    margin-bottom: 4rem;
+  }
+}
+.tickets-title {
+  line-height: $line-flat;
+  letter-spacing: 0.08em;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 2rem;
+  color: $color-sunred;
+  @include over-sm {
+  }
+  @include over-md {
+    font-size: 4em;
+  }
+}
+.tickets-note {
+  margin-top: 1rem;
+  text-align: center;
+  color: $color-inky;
+  font-size: 0.75rem;
+  @include over-md {
+    font-size: 0.875rem;
+  }
+}
+.tickets-body {
+  @include over-md {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: $width-container;
+  }
 }
 .tickets-action {
-  margin-bottom: 1rem;
+  @include over-md {
+    display: flex;
+    margin-left: -1rem;
+    margin-right: -1rem;
+    > * {
+      box-sizing: border-box;
+      flex: 0 0 50%;
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+  }
+}
+.tickets-button {
+  margin-top: 1rem;
   text-align: center;
   .Button {
     display: block;
-    padding: 1em 2em;
+    padding: 1em;
     font-size: 1.5em;
   }
   @include below-sm {
@@ -1639,19 +1731,16 @@ $hex-image: $hex-canvas * $hex-ratio;
     }
   }
   @include over-md {
-    margin-bottom: 16rem;
-    padding: 0;
     .Button {
-      display: inline-block;
-      padding: 1em 2em;
-      font-size: 2.5em;
+      padding: 1em;
+      font-size: 2em;
     }
   }
 }
-.tickets-body {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: $width-container;
+.tickets-buttonLead {
+  display: block;
+  font-size: 0.75em;
+  text-transform: none;
 }
 
 // Sponsors
@@ -2228,9 +2317,8 @@ $hex-image: $hex-canvas * $hex-ratio;
 .contentinfo {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: $color-shadow;
+  background-color: $color-deepnight;
   @include over-md {
-    //margin-top: 256px; // Fix gutter
     background-color: $color-deepnight;
   }
 }
@@ -2335,4 +2423,3 @@ $hex-image: $hex-canvas * $hex-ratio;
 .u-em {
   color: $color-sunred;
 }
-
