--- a/2016/src/html/about.ejs
+++ b/2016/src/html/about.ejs
@@ -36,25 +36,27 @@ var page = {
     <div class="page-section">
       <h3 class="page-subhead">Organizer</h3>
       <div class="page-sectionBody">
-        <a href="https://twitter.com/yosuke_furukawa" class="organizer">
-          <div class="organizer-image">
-            <div class="Hex">
-              <div class="Hex-outer">
-                <div class="Hex-inner">
-                  <img src="img/pic-yosuke.jpg" class="Hex-image">
+        <div class="about-organizer">
+          <a href="https://twitter.com/yosuke_furukawa" target="_blank" class="organizer">
+            <div class="organizer-image">
+              <div class="Hex">
+                <div class="Hex-outer">
+                  <div class="Hex-inner">
+                    <img src="img/pic-yosuke.jpg" class="Hex-image">
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="organizer-info">
-            <p class="organizer-name">
-              Yosuke Furukawa
-            </p>
-            <p class="organizer-id">
-              @yosuke_furukawa
-            </p>
-          </div>
-        </a>
+            <div class="organizer-info">
+              <p class="organizer-name">
+                Yosuke Furukawa
+              </p>
+              <p class="organizer-id">
+                @yosuke_furukawa
+              </p>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
 
