日程表現変更

--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -1,11 +1,8 @@
 <div class="timetable -conference">
   <div class="timetable-caption">
     <h3 class="timetable-title">
-      Conference Day <span class="timetable-venue">at Markcity</span>
+      Nov 13 <span class="timetable-venue">at Markcity</span>
     </h3>
-    <p class="timetable-day">
-      Nov 13
-    </p>
   </div>
   <div class="timetable-header">
     <div class="timetable-time"></div>
