--- a/2016/src/html/_partial/timetable-workshop.ejs
+++ b/2016/src/html/_partial/timetable-workshop.ejs
@@ -1,10 +1,7 @@
 <div class="timetable -workshop">
   <div class="timetable-caption">
     <h3 class="timetable-title">
-      Workshop Day <span class="timetable-venue">at dots.</span>              </h3>
-    <p class="timetable-day">
-      Nov 12
-    </p>
+      Nov 12 <span class="timetable-venue">at dots.</span>              </h3>
   </div>
   <div class="timetable-header">
     <div class="timetable-time"></div>
