チケット周りのラベル修正

--- a/2016/src/html/_partial/tickets.ejs
+++ b/2016/src/html/_partial/tickets.ejs
@@ -10,12 +10,14 @@
     <div class="tickets-action">
       <div class="tickets-button">
         <a href="https://eventdots.jp/event/602440" class="Button -workshop" target="_blank">
-          Nov 12, Ticket
+          Get 1st Day Ticket
+          <span class="tickets-buttonLead">Nov 12</span>
         </a>
       </div>
       <div class="tickets-button">
         <a href="http://nodejs.connpass.com/event/42182" class="Button -conference" target="_blank">
-          Nov 13, Ticket
+          Get 2nd Day Ticket
+          <span class="tickets-buttonLead">Nov 13</span>
         </a>
       </div>
     </div>
