--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -25,14 +25,25 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Greeting, Notice</p>
-        <p class="timetable-sessionSpeaker">@yosuke_furukawa, @tito</p>
+        <p class="timetable-sessionTitle">Description of our venue</p>
+        <p class="timetable-sessionSpeaker">Takahiro Ito</p>
       </div>
     </div>
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>10:05 - 10:20</p>
+      <p>10:05 - 10:15</p>
+    </div>
+    <div class="timetable-content">
+      <div class="timetable-session">
+        <p class="timetable-sessionTitle">Opening Talk</p>
+        <p class="timetable-sessionSpeaker">Yosuke Furukawa</p>
+      </div>
+    </div>
+  </div>
+  <div class="timetable-row">
+    <div class="timetable-time">
+      <p>10:15 - 10:30</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -42,7 +53,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>10:20 - 10:50</p>
+      <p>10:30 - 11:00</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -50,18 +61,18 @@
         <p class="timetable-sessionSpeaker">Alejandro Oviedo</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Alt-Ctrl: Scream Into This Arduino</p>
-        <p class="timetable-sessionSpeaker">Rachel White</p>
+        <p class="timetable-sessionTitle">TBD</p>
+        <p class="timetable-sessionSpeaker">TBD</p>
       </div>
     </div>
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>10:50 - 11:20</p>
+      <p>11:00 - 11:30</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Debugging Node.js Performance Issues in Production</p>
+        <p class="timetable-sessionTitle">Build your own JavaScript powered radio</p>
         <p class="timetable-sessionSpeaker">Thomas Watson</p>
       </div>
       <div class="timetable-session">
@@ -72,7 +83,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>11:20 - 11:50</p>
+      <p>11:30 - 12:00</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -87,7 +98,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>11:50 - 13:00</p>
+      <p>12:00 - 13:00</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -212,7 +223,7 @@
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">JavaScript による並列処理：共有メモリとロック</p>
-        <p class="timetable-sessionSpeaker">清水 智公</p>
+        <p class="timetable-sessionSpeaker">Noritada Shimizu</p>
       </div>
     </div>
   </div>
@@ -297,10 +308,10 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>19:15 - </p>
+      <p>19:15 - Last</p>
     </div>
     <div class="timetable-content">
-      <p>Closing</p>
+      <p>Closing & Party</p>
     </div>
   </div>
 </div>
