--- a/2016/src/html/_partial/timetable-workshop.ejs
+++ b/2016/src/html/_partial/timetable-workshop.ejs
@@ -11,7 +11,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>09:00 - 10:00</p>
+      <p>10:30 - 11:00</p>
     </div>
     <div class="timetable-content">
       <p>Opening</p>
@@ -19,7 +19,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>10:00 - 12:00</p>
+      <p>11:00 - 12:45</p>
     </div>
     <div class="timetable-content">
       <p class="timetable-sessionTitle">Node School</p>
@@ -28,7 +28,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>12:00 - 13:00</p>
+      <p>12:45 - 13:45</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -38,16 +38,16 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>13:00 - 15:00</p>
+      <p>13:45 - 15:45</p>
     </div>
     <div class="timetable-content">
       <p class="timetable-sessionTitle">Node School</p>
-      <p class="timetable-sessionTitle">Braintree Workshop</p>
+      <p class="timetable-sessionTitle">PayPal / Braintree Workshop</p>
     </div>
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>15:00 - 17:00</p>
+      <p>15:45 - 17:15</p>
     </div>
     <div class="timetable-content">
       <p class="timetable-sessionTitle">Node School</p>
@@ -56,7 +56,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>17:00 - 18:00</p>
+      <p>17:15 - 18:15</p>
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
@@ -92,7 +92,7 @@
   </div>
   <div class="timetable-row">
     <div class="timetable-time">
-      <p>18:00</p>
+      <p>18:15 - 18:30</p>
     </div>
     <div class="timetable-content">
       <p>Closing</p>
