--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -1282,7 +1282,7 @@ $hex-image: $hex-canvas * $hex-ratio;
       padding-left: 1rem;
     }
   }
-  @include over-md {
+  @include over-lg {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1rem;
@@ -1717,14 +1717,14 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
 }
 .tickets-body {
-  @include over-md {
+  @include over-lg {
     margin-left: auto;
     margin-right: auto;
     max-width: $width-container;
   }
 }
 .tickets-action {
-  @include over-md {
+  @include over-lg {
     display: flex;
     margin-left: -1rem;
     margin-right: -1rem;
